fixed overflow

--- a/style.scss
+++ b/style.scss
@@ -55,4 +55,5 @@ h1.section3 {
 .open {
   height: 300px;
   transition: height .5s;
+  overflow: hidden;
 }
